# security_code_signature

./: AGENTS.md  BUILD.gn  CLAUDE.md  OAT.xml  README.md  README_zh.md  bundle.json  code_signature.gni  hisysevent.yaml
interfaces/innerkits/code_sign_utils/: BUILD.gn
interfaces/innerkits/code_sign_utils/include/: code_sign_enable_multi_task.h  code_sign_helper.h  code_sign_utils.h  code_sign_utils_in_c.h  stat_utils.h
interfaces/innerkits/code_sign_utils/src/: code_sign_enable_multi_task.cpp  code_sign_helper.cpp  code_sign_utils.cpp  code_sign_utils_in_c.cpp
interfaces/innerkits/jit_code_sign/: BUILD.gn
interfaces/innerkits/jit_code_sign/include/: jit_buffer_integrity.h  jit_code_signer_base.h  jit_code_signer_factory.h  jit_code_signer_hybrid.h  jit_code_signer_single.h  jit_fort_helper.h  pac_sign_ctx.h  random_helper.h
interfaces/innerkits/jit_code_sign/src/: jit_code_signer_base.cpp  jit_code_signer_factory.cpp  jit_code_signer_hybrid.cpp  jit_code_signer_single.cpp  pac_sign_ctx.cpp
patches/: patches.json
services/key_enable/: AGENTS.md  BUILD.gn  key_enable.cfg
services/key_enable/cfg/: key_enable.disable_xpm.cfg  key_enable.enable_xpm.cfg
services/key_enable/cfg/disable_xpm/: key_enable.cfg
services/key_enable/cfg/enable_xpm/level1/: key_enable.cfg
services/key_enable/cfg/enable_xpm/level2/: key_enable.cfg
services/key_enable/cfg/enable_xpm/level3/: key_enable.cfg
services/key_enable/cfg/enable_xpm/level4/: key_enable.cfg
services/key_enable/cfg/enable_xpm/level5/: key_enable.cfg
services/key_enable/config/: trusted_cert_path.json  trusted_cert_path_mirror.json  trusted_cert_path_test.json
services/key_enable/config/not_sign_hap_py_path/: trusted_cert_path_test.json
services/key_enable/config/openharmony/: trusted_cert_path.json
services/key_enable/config/openharmony/dev/: trusted_cert_path.json
services/key_enable/config/openharmony/release/: trusted_cert_path.json
services/key_enable/include/: rust_interface.h
services/key_enable/src/: cert_chain_utils.rs  cert_path_utils.rs  cert_utils.rs  cs_hisysevent.rs  file_utils.rs  key_enable.rs  lib.rs  main.rs  profile_utils.rs
services/key_enable/src/asan/: disable_rust_interface.cpp
services/key_enable/utils/: BUILD.gn
services/key_enable/utils/include/: cert_path.h  cert_utils.h  key_enable_adapter.h  key_utils.h  unlock_event_helper.h
services/key_enable/utils/src/: cert_path.cpp  cert_utils.cpp  devices_security.cpp  key_enable_adapter.cpp  key_utils.cpp  local_code_sign_utils.cpp  unlock_event_helper.cpp
services/local_code_sign/: AGENTS.md  BUILD.gn  local_code_sign.cfg
services/local_code_sign/config/: trusted_attest_root_ca.cer
services/local_code_sign/config/OpenHarmony/: trusted_attest_root_ca.cer
services/local_code_sign/include/: local_code_sign_service.h  local_code_sign_stub.h  local_sign_key.h  permission_utils.h
services/local_code_sign/sa_profile/: 3507.json
services/local_code_sign/src/: local_code_sign_service.cpp  local_code_sign_stub.cpp  local_sign_key.cpp  permission_utils.cpp
test/common/: BUILD.gn
test/common/include/: code_sign_test_common.h  fuzz_common.h
test/common/src/: code_sign_test_common.cpp  fuzz_common.cpp
test/fuzztest/local_code_sign_stub/initlocalcertificate_fuzzer/: BUILD.gn  initlocalcertificate_fuzzer.cpp  initlocalcertificate_fuzzer.h  initlocalcertificatestub_fuzzer.cpp  initlocalcertificatestub_fuzzer.h
test/unittest/: BUILD.gn  add_cert_path_test.cpp  cert_chain_verifier_test.cpp  code_sign_attr_utils_test.cpp  code_sign_ioctl_test.cpp  code_sign_utils_in_c_test.cpp  code_sign_utils_test.cpp  enable_verity_test.cpp  jit_code_sign_test.cpp  key_enable_utils_test.cpp  local_code_sign_test.cpp  local_code_sign_utils_mock_test.cpp  local_code_sign_utils_test.cpp  multi_thread_local_sign_test.cpp  openssl_utils_test.cpp  rust_key_enable_test.rs  sign_and_enforce_test.cpp
test/unittest/mock/include/: byte_buffer_mock_helper.h  hks_api.h  hks_api_mock_helper.h
test/unittest/mock/src/: hks_api.cpp  hks_api_mock_helper.cpp  hks_api_mock_test.cpp
test/unittest/resources/: ohos_test.xml
test/unittest/resources/demo_elf_file/: elf-adhoc-signed  elf-codesign-section-off-not-aligned  elf-codesign-section-size-not-aligned  elf-file-small  elf-fs-log-error  elf-fs-version-error  elf-fsd-length-error  elf-fsd-type-error  elf-no-codesign  elf-release-sign-error  elf-release-signed
test/unittest/resources/demo_elf_v1/: elf-signed-block-header-off-error  elf-signed-block-header-off-zero  elf-signed-block-num-error  elf-signed-block-num-zero  elf-signed-block-size-error  elf-signed-file-error  elf-signed-file-small  elf-signed-magic-error  elf-signed-mt-length-error  elf-signed-mt-type-error  elf-signed-release  elf-signed-version-error  elf-signed-with-profile
test/unittest/resources/demo_with_hnp/: demo_with_hnp_signed.hap
test/unittest/resources/demo_with_multi_lib/: demo_with_code_sign_block_size_error.hap  entry-default-signed-debug-wrong-cert.hap  entry-default-signed-debug-wrong-cert.p7b  entry-default-signed-debug.hap  entry-default-signed-debug.p7b  entry-default-signed-debug2.p7b  entry-default-signed-release.hap  entry-default-signed-release.p7b  entry-default-signed-release2.p7b  entry-enterprise-resigned-release.hap
test/unittest/resources/demo_without_lib/: demo_without_lib_signed.hap
test/unittest/utils/include/: local_key_helper.h  xpm_common.h
test/unittest/utils/src/: enable_key_utils.cpp  xpm_common.cpp
utils/: BUILD.gn
utils/include/: cert_utils.h  code_sign_block.h  cs_hisysevent.h  data_size_report_adapter.h  elf_code_sign_block.h  elf_code_sign_block_v1.h  fdsan.h  fsverity_utils_helper.h  huks_attest_verifier.h  huks_param_set.h  log.h  log_rust.h  openssl_utils.h  pkcs7_data.h  pkcs7_generator.h  signer_info.h
utils/src/: cert_utils.cpp  code_sign_block.cpp  data_size_report_adapter.cpp  elf_code_sign_block.cpp  elf_code_sign_block_v1.cpp  file_helper.cpp  fsverity_utils_helper.cpp  huks_attest_verifier.cpp  openssl_utils.cpp  pkcs7_data.cpp  pkcs7_generator.cpp  signer_info.cpp
(+70 files in other folders)
