# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../code_signature.gni")

ohos_source_set("fsverity_sign_src_set") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  sources = [
    "src/fsverity_utils_helper.cpp",
    "src/openssl_utils.cpp",
    "src/pkcs7_data.cpp",
    "src/pkcs7_generator.cpp",
    "src/signer_info.cpp",
  ]
  include_dirs = [ "include" ]
  public_configs = [ "${code_signature_root_dir}:common_public_config" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "fsverity-utils:libfsverity_utils",
    "hilog:libhilog",
    "openssl:libcrypto_shared",
  ]
  part_name = "code_signature"
  subsystem_name = "security"
}
